@@ -1,3 +1,9 @@
+2002-08-03  Zoran Vasiljevic <zoran@archiware.com>
+
+	* generic/threadSvListCmd.c: corrected "tsv::lpush"
+	to correctly make a copy of the object pushed into
+	the list in shared array element.
+
 2002-07-22  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* README: Fix typo.
